# c-list

./: .gitignore  .travis.yml  AUTHORS  COPYING  Makefile.am  NEWS  NEWS.md  README  configure.ac  meson.build
.github/workflows/: ci.yml
src/: c-list-fwd.h  c-list.h  c-list.pc.in  libclist.pc.in  meson.build  test-api.c  test-basic.c  test-embed.c
